--- a/hw_20220121_01.guessPassword.html
+++ b/hw_20220121_01.guessPassword.html
@@ -94,10 +94,10 @@
 
         const numberBtns = document.querySelectorAll(".num")
 
-        //window.onlord
-
+        //全域宣告
         let random 
 
+        //window.onlord
         window.onload = function () {
             unStart()
             //遊戲開始按鈕
@@ -160,16 +160,21 @@
 
         function unStart() {
             numberBtns.forEach(btn => {
-                btn.disabled = true
+                // btn.disabled = true
+                btn.setAttribute('disabled',true)
             })
-            gameEndbtn.disabled = true
+            // gameEndbtn.disabled = true
         }
-
+        
         function startGame() {
+            min = 1
+            max = 100
+            gameReport.innerText = `${min} ~ ${max}`
             numberBtns.forEach(btn => {
-                btn.disabled = false
+                // btn.disabled = false
+                btn.removeAttribute('disabled')
             })
-            gameEndbtn.disabled = false
+            // gameEndbtn.disabled = false
         }
     </script>
 </body>
