--- a/hw_20220128_solt/hw_20220128_solt.html
+++ b/hw_20220128_solt/hw_20220128_solt.html
@@ -14,6 +14,7 @@
     <style>
         body{
             background-color:cornsilk
+            /* background-size cover; */
         }
         .col-1 {
             font-size: 10px;
@@ -23,6 +24,7 @@
         }
         img{
             width: 200px;
+            
         }
 
         [box-id].active {
@@ -30,6 +32,7 @@
             /* background-color: 	#FFFF6F; */
             transition: 0s;
             transform: translate(5px, 5px);
+            visibility: visible;
         }
 
         [box-id] {
@@ -39,6 +42,7 @@
             align-items: center;
             border: none;
             transition: 0.5s;
+            visibility: hidden;
         }
 
         #number {
